# TPL

./: .gitignore  CMakeLists.txt  TPL.pptx
doc/: TPL.pptx
rippledp/: Makefile  main.c
src/: CMakeLists.txt  CMakeLists_backup.txt  config.json  tplconfig.json
src/bookshelf/: CMakeLists.txt  Doxyfile  README  bookshelf_net.cpp  bookshelf_net.h  bookshelf_net_parser.hpp  bookshelf_net_parser_test.cpp  bookshelf_node.cpp  bookshelf_node.h  bookshelf_node_parser.hpp  bookshelf_node_parser_test.cpp  bookshelf_pl.cpp  bookshelf_pl.h  bookshelf_pl_generator.hpp  bookshelf_pl_generator_test.cpp  bookshelf_pl_parser.hpp  bookshelf_pl_parser_test.cpp  catch.hpp  makefile  utils.h
src/bookshelf/unittest/: CMakeLists.txt  bookshelf_pl_generator_test.cpp  bookshelf_pl_parser_test.cpp
src/scripts/: bookshelf.py  chip_size.py  plot_nodes.py
src/test/: CMakeLists.txt  assert_free_nodes_order.cpp
src/tools/: ntuplace.php.html
src/tools/def/: DFEF_malloc.cpp  Makefile  def.output  def.y  def_keywords.cpp  defiAlias.cpp  defiAssertion.cpp  defiBlockage.cpp  defiComponent.cpp  defiFill.cpp  defiNet.cpp  defiPinCap.cpp  defiScanchain.cpp  defiSlot.cpp  defiVia.cpp  defrReader.cpp  defwWriter.cpp  defwWriterCalls.cpp  lex.cpph
src/tools/lef/: FEF_stringhash.h  Makefile  lef.output  lef.y  lefiLayer.cpp  lefiMacro.cpp  lefiMisc.cpp  lefiNonDefault.cpp  lefiVia.cpp  lefrReader.cpp  lefwWriter.cpp  lex.cpph
src/tools/rippledp/: Makefile  README  main.c
src/tpl/: .stxxl  CMakeLists.txt  CMakeLists_backup.txt  Doxyfile  TplConfig.cpp  TplConfig.h  config.json  debug.h  rippledp.h  tpl_abstract_algorithm.h  tpl_abstract_detail_placement.h  tpl_abstract_macro_placement.h  tpl_abstract_net_force_model.h  tpl_abstract_net_model.h  tpl_abstract_thermal_force_model.h  tpl_abstract_thermal_model.h  tpl_algorithm_gy.cpp  tpl_algorithm_gy.h  tpl_algorithm_gy_test.cpp  tpl_algorithm_interface.h  tpl_algorithm_pf.cpp  tpl_algorithm_pf.h  tpl_algorithm_pf_test.cpp  tpl_algorithm_test.cpp  tpl_circuit.cpp  tpl_circuit.h  tpl_circuit_test.cpp  tpl_config.cpp  tpl_config.h  tpl_config_test.cpp  tpl_db.cpp  tpl_db.h  tpl_db_test.cpp  tpl_gy_algorithm.cpp  tpl_gy_algorithm.h  tpl_gy_algorithm_test.cpp  tpl_gy_detail_placement.cpp  tpl_gy_detail_placement.h  tpl_net_model_interface.cpp  tpl_net_model_interface.h  (+19 more)
src/tpl_fpeng/: CMakeLists.txt  Doxyfile  tpl_algorithm.cpp  tpl_algorithm.h  tpl_algorithm_test.cpp  tpl_circuit.cpp  tpl_circuit.h  tpl_circuit_test.cpp
src/tpl_gy/: CMakeLists.txt  main.cpp  makefile  tpl_algorithm.cpp  tpl_algorithm.h  tpl_algorithm_gy.cpp  tpl_algorithm_gy.h  tpl_algorithm_test_gy.cpp  tpl_circuit.cpp  tpl_circuit.h
src/tpl_pf/: CMakeLists.txt  tpl_algorithm_pf.cpp  tpl_algorithm_test_pf.cpp
src/unittest/: CMakeLists.txt  catch.hpp  check_free_nodes_order.cpp  test_tpl_config.cpp  test_tpl_db.cpp  test_tpl_gy_detail_placement.cpp  test_tpl_standard_algorithm.cpp  test_tpl_standard_detail_placement.cpp  test_tpl_standard_net_force_model.cpp  test_tpl_standard_net_model.cpp  test_tpl_standard_thermal_force_model.cpp  test_tpl_standard_thermal_force_model.cpp~HEAD  test_tpl_standard_thermal_model.cpp
